# waifu-chatbot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: .env.example  .gitignore  Dockerfile  display_graph_image.py  pyproject.toml
api/app/: main.py
api/app/api/v1/: __init__.py  demo.py  health.py  openai.py
api/app/api/v1/openai/: __init__.py  chatbot.py  thread.py  waifu_chatbot.py
api/app/core/: config.py
api/app/core/db/: database.py
api/app/core/openai/: azure.py
api/app/core/openai/agents/: fandom_lookup_agent.py  linkedin_lookup_agent.py
api/app/core/openai/graphs/: chatbot.py
api/app/core/openai/tools/: find_in_database.py  search.py
api/app/crud/: crud_character.py  crud_thread.py
api/app/models/: character.py  chat.py  thread.py
api/app/utils/: fandom.py  random.py  string.py
web/: .env.example  .prettierrc  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
web/src/@types/: chat.ts  thread.ts  waifu-chat.ts
web/src/app/: colors.css  globals.css  layout.tsx  template.tsx
web/src/app/(chatbot)/: layout.tsx  page.tsx
web/src/app/[thread]/: page.tsx
web/src/app/character/: layout.tsx  page.tsx
web/src/components/: providers.tsx  slide-animate.tsx  underlay.tsx
web/src/components/chat/: chat-box.tsx  chat-input.tsx  threads-list.tsx  (+2 more)
web/src/contexts/: global-context.tsx
web/src/data/: chat.ts  thread.ts  waifu-chatbot.ts
web/src/hooks/: use-global-context.ts  use-invalidate-tag.tsx  use-query-params.ts  use-stream-message.ts
web/src/lib/: fetch-base.ts
web/src/utils/:  array.ts
(+12 files in other folders)
