[project]
name = "example-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "ipython>=9.0.2",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.9",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "langgraph-checkpoint>=2.0.18",
    "langgraph-checkpoint-postgres>=2.0.16",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.13",
    "psycopg>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.24",
    "tavily-python>=0.5.1",
]
